@@ -16,6 +16,7 @@
 jar.commons-beanutils.version=1.7.0
 jar.commons-lang.version=2.2
 jar.commons-logging.version=1.1
+jar.commons-net.version=1.4.1
 jar.crimson.version=1.1.3
 #jar.dom4j.version=1.6.1
 jar.jdom.version=1.0
